force-app/main/default/objects/SalesforceSMSTracking__x/SalesforceSMSTracking__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceSMSTracking</externalName>
    <label>SMS Tracking Salesforce</label>
    <pluralLabel>SMS Trackings Salesforce</pluralLabel>
</CustomObject>