force-app/main/default/objects/SalesforceSMSTracking__x/fields/ActivityC__c.field-meta.xml
<CustomField>
    <fullName>ActivityC__c</fullName>
    <description>ActivityC</description>
    <externalDeveloperName>ActivityC</externalDeveloperName>
    <label>Activity di Appuntamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>