force-app/main/default/objects/SalesforceSMSTracking__x/fields/CampaignID_Name__c.field-meta.xml
<CustomField>
    <fullName>CampaignID_Name__c</fullName>
    <description>CampaignID_Name</description>
    <externalDeveloperName>CampaignID_Name</externalDeveloperName>
    <label>CampaignID_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>