force-app/main/default/objects/SalesforceSMSTracking__x/fields/DateTimeRefC__c.field-meta.xml
<CustomField>
    <fullName>DateTimeRefC__c</fullName>
    <description>DateTimeRefC</description>
    <externalDeveloperName>DateTimeRefC</externalDeveloperName>
    <label>DateTimeRefC</label>
    <type>DateTime</type>
</CustomField>