force-app/main/default/objects/SalesforceSMSTracking__x/fields/FromNameC__c.field-meta.xml
<CustomField>
    <fullName>FromNameC__c</fullName>
    <description>FromNameC</description>
    <externalDeveloperName>FromNameC</externalDeveloperName>
    <label>FromNameC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>