force-app/main/default/objects/SalesforceSMSTracking__x/fields/MobileC__c.field-meta.xml
<CustomField>
    <fullName>MobileC__c</fullName>
    <description>MobileC</description>
    <externalDeveloperName>MobileC</externalDeveloperName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>