force-app/main/default/objects/SalesforceSMSTracking__x/fields/OptInC__c.field-meta.xml
<CustomField>
    <fullName>OptInC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OptInC</description>
    <externalDeveloperName>OptInC</externalDeveloperName>
    <label>OptInC</label>
    <type>Checkbox</type>
</CustomField>