force-app/main/default/objects/SalesforceSMSTracking__x/fields/OrderIDC__c.field-meta.xml
<CustomField>
    <fullName>OrderIDC__c</fullName>
    <description>OrderIDC</description>
    <externalDeveloperName>OrderIDC</externalDeveloperName>
    <label>ID Ordine</label>
    <length>255</length>
    <referenceTo>SalesforceOrder__x</referenceTo>
    <relationshipLabel>SMS Trackings Salesforce</relationshipLabel>
    <relationshipName>SMSTrackingsSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>