force-app/main/default/objects/SalesforceSMSTracking__x/fields/UnsubC__c.field-meta.xml
<CustomField>
    <fullName>UnsubC__c</fullName>
    <description>UnsubC</description>
    <externalDeveloperName>UnsubC</externalDeveloperName>
    <label>UnsubC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>